# resubname

./: LICENSE  README.md  pyproject.toml  resubname.py  test_resubname.py
.github/workflows/: push.yml
snapshots/: snap_test_resubname.py
