[tool.poetry]
name = "resubname"
version = "0.3.0"
description = "Rename subtitle filenames to match videos."
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/whtsky/resubname"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
snapshottest = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
resubname = "resubname:cli"



[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''